--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
-        {% include "common/nav_bar.html"%}
+        {% include "common/nav_bar.html" with nav_bar_step="action" %}
         <div class="fr-container fr-py-5w">
             <div class="fr-col-md-12 fr-mt-2w fr-mb-4w">
                 <div role="alert" class="fr-alert fr-alert--success">
