--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
-        {% include "common/nav_bar.html"%}
+        {% include "common/nav_bar.html" with nav_bar_step="preview" %}
         <div class="fr-container fr-mb-2w fr-pt-5w">
             <h2>Visualiser votre convention</h2>
             <div class="fr-col-md-12 fr-py-5w h-80vh">
