--- a/templates/common/nav_bar.html
+++ b/templates/common/nav_bar.html
@@ -7,16 +7,16 @@
                 <ul class="fr-nav__list">
                     <li class="fr-nav__item">
                         {% if convention|display_redirect_post_action %}
-                            <a class="fr-nav__link" href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}" target="_self" {% if convention_form_step == 12 %}aria-current="page"{% endif %}>Vue d'ensemble</a>
+                            <a class="fr-nav__link" href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "action" %}aria-current="page"{% endif %}>Vue d'ensemble</a>
                         {% else %}
-                            <a class="fr-nav__link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if convention_form_step == 12 %}aria-current="page"{% endif %}>Vue d'ensemble</a>
+                            <a class="fr-nav__link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "sent" %}aria-current="page"{% endif %}>Vue d'ensemble</a>
                         {% endif %}
                     </li>
                     <li class="fr-nav__item">
-                        <a class="fr-nav__link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" target="_self" {% if convention_form_step == 10  %}aria-current="page"{% endif %}>Informations détaillées</a>
+                        <a class="fr-nav__link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "recapitulatif" %}aria-current="page"{% endif %}>Informations détaillées</a>
                     </li>
                     <li class="fr-nav__item">
-                        <a class="fr-nav__link" href="{% url 'conventions:preview' convention_uuid=convention.uuid %}" target="_self" {% if convention_form_step == 11  %}aria-current="page"{% endif %}>Visualiser votre document</a>
+                        <a class="fr-nav__link" href="{% url 'conventions:preview' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "preview" %}aria-current="page"{% endif %}>Visualiser votre document</a>
                     </li>
                 </ul>
             </nav>
