--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -40,24 +40,26 @@
                                                 <div><a href="https://docs.apilos.beta.gouv.fr/apres-la-validation-de-la-convention/bailleurs-parametres/comment-afficher-mes-programmes-par-departement" target="_blank" rel="noopener" class="fr-link fr-text--xs">Plus d’informations sur les paramètres de votre compte</a></div>
                                             </div>
                                         </details>
-                                        <div class="fr-mt-1w block--row-strech" id="{{form.lot_uuid.id_for_label}}_div">
+
+
+                                        <div class="fr-mt-1w block--row-strech" id="{{form.lot.id_for_label}}_div">
                                             <select
-                                                class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}"
-                                                id="lot_uuid"
-                                                name="lot_uuid"
+                                                class="fr-select {% if form.lot.errors %}fr-select--error{% endif %}"
+                                                id="{{form.lot.id_for_label}}"
+                                                name="{{form.lot.html_name}}"
                                                 {% if convention %}disabled{% endif %} >
                                                 <option value="" selected disabled hidden>Selectionnez une option</option>
-                                                {% for lot in programmes %}
+                                                {% for lot in lots %}
                                                     <option
                                                         value="{{lot.uuid}}"
-                                                        {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}
-                                                        {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot_uuid.value %}disabled="disabled"{% endif %}>
+                                                        {% if lot.uuid|stringformat:"s"  == form.lot.value %}selected{% endif %}
+                                                        {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot.value %}disabled="disabled"{% endif %}>
                                                         {{ lot.programme.ville}} - {{ lot.programme.nom }} - {{lot.nb_logements}} lgts - {{ lot.get_type_habitat_display }} - {{ lot.financement }}
                                                     </option>
                                                 {% endfor %}
                                             </select>
                                         </div>
-                                        {% for error in form.lot_uuid.errors %}
+                                        {% for error in form.lot.errors %}
                                             <p id="select-error-desc-error" class="fr-error-text">
                                                 {{ error }}
                                             </p>
@@ -82,17 +84,9 @@
                                             });
                                         </script>
                                         <div id='programme_creation' {% if form.existing_programme.value != 'creation' %}hidden{% endif %}>
-                                            {% if bailleurs.count == 1 %}
-                                                {% include "common/form/input_select.html" with form_input=form.bailleur enum=bailleurs without_empty_option=True mandatory_input=True %}
-                                            {% else %}
-                                                {% include "common/form/input_select.html" with form_input=form.bailleur enum=bailleurs without_empty_option=False mandatory_input=True %}
-                                            {% endif %}
+                                            {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True %}
 
-                                            {% if administrations.count == 1 %}
-                                                {% include "common/form/input_select.html" with form_input=form.administration enum=administrations without_empty_option=True mandatory_input=True %}
-                                            {% else %}
-                                                {% include "common/form/input_select.html" with form_input=form.administration enum=administrations without_empty_option=False mandatory_input=True %}
-                                            {% endif %}
+                                            {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True %}
 
                                             {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True %}
 
