--- a/static/css/main.css
+++ b/static/css/main.css
@@ -234,6 +234,10 @@ a[href].apilos-block-faqlink:hover {
   border-radius: 0.5rem;
   color: #000091;
   text-align: left;
+  line-height: 24px;
+}
+a[href].apilos-block-faqlink:after {
+  content: none;
 }
 .apilos-block-faqlink .fr-p-2w {
   margin: auto;
