--- a/templates/conventions/new_avenant.html
+++ b/templates/conventions/new_avenant.html
@@ -11,7 +11,7 @@
                     <h2 class="fr-text--lg">Mettre à jour les informations du bailleur</h2>
                     <p>Suite à une vente, un changement de gestionnaire, ou un changement de dénomination du propriétaire</p>
                 </div>
-                <form method="post" action="{% if redirect_action %}{{ redirect_action }}{% endif %}">
+                <form method="post">
                     {% csrf_token %}
                     <input value="{{avenant_types.bailleur}}" name="avenant_type" hidden>
                 <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
@@ -23,7 +23,7 @@
                     <h2 class="fr-text--lg">Mettre à jour les logements</h2>
                     <p>En cas de modification du programme, de travaux, de réhabilitation totale, ou d’une évolution des loyers.</p>
                 </div>
-                <form method="post" action="{% if redirect_action %}{{ redirect_action }}{% endif %}">
+                <form method="post">
                     {% csrf_token %}
                     <input value="{{avenant_types.logements}}" name="avenant_type" hidden>
                     <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
@@ -35,7 +35,7 @@
                     <h2 class="fr-text--lg">Mettre à jour la durée de la convention</h2>
                     <p>En cas de nouveaux travaux financés</p>
                 </div>
-                <form method="post" action="{% if redirect_action %}{{ redirect_action }}{% endif %}">
+                <form method="post">
                     {% csrf_token %}
                     <input value="{{avenant_types.duree}}" name="avenant_type" hidden>
                 <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left"><span class=""></span>Mettre à jour</button>
