--- a/templates/common/nav_bar.html
+++ b/templates/common/nav_bar.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 
 {% if convention|display_is_validated %}
-    <div class="fr-container">
+    <div class="fr-container apilos-sticky apilos-sticky-2 ds_banner">
         <div class="fr-col-12">
             <nav class="fr-nav" id="recap_navigation" role="navigation" aria-label="Menu principal">
                 <ul class="fr-nav__list">
