--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-{% if form_step and convention|display_convention_form_progressbar %}
+{% if form_step %}
     <div class="fr-container">
         <div class="fr-stepper">
             <h2 class="fr-stepper__title">
