--- a/templates/operations/common/form_header.html
+++ b/templates/operations/common/form_header.html
@@ -6,7 +6,7 @@
 
 
 
-<div class='background-contrast-grey950 apilos-sticky-top fr-pt-2w'>
+<div class='background-contrast-grey950 apilos-sticky apilos-sticky-top fr-pt-2w'>
     <div class="fr-container">
         <div class="fr-col-12 fr-pb-2w">
             <div class="fr-grid-row fr-grid-row--gutters">
