--- a/templates/conventions/recapitulatif/annexes.html
+++ b/templates/conventions/recapitulatif/annexes.html
@@ -10,9 +10,15 @@
                             Annexes
                         </h4>
                     </div>
-                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
-                        <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                    </a>
+                    {% if convention|display_convention_form_progressbar %}
+                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
+                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                        </a>
+                    {% else %}
+                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:avenant_annexes' convention_uuid=convention.uuid %}" >
+                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                        </a>
+                    {% endif %}
                 </div>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                     <table>
