--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -14,6 +14,10 @@
                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:logements' convention_uuid=convention.uuid %}" >
                             <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                         </a>
+                    {% else %}
+                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:avenant_logements' convention_uuid=convention.uuid %}" >
+                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                        </a>
                     {% endif %}
                 </div>
                 <div class="block--row-strech">
