--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -14,7 +14,7 @@
             <p>
                 <span class="fr-icon-warning-line" aria-hidden="true"></span>
                 Une fois la convention en statut "A instruire", c'est l'instructeur qui aura la main sur la convention (c'est à dire vous-même).
-                Si l'intervention du bailleur est nécéssaire, vous devrez alors lui renvoyer en cliquant sur le bouton "Demander des corrections au bailleur"
+                Si l'intervention du bailleur est nécessaire, vous devrez alors lui renvoyer en cliquant sur le bouton "Demander des corrections au bailleur"
             </p>
         </div>
         <form method="post" action="{% url 'conventions:save' convention_uuid=convention.uuid %}" data-turbo="false">
