--- a/static/css/main.css
+++ b/static/css/main.css
@@ -681,6 +681,27 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
 .apilos-colored_status--Resiliee {
   background-color: #E2E2E2;
 }
+.fr-alert--Projet {
+  box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #4EBEE1;
+  background-color: #fff;
+}
+.fr-alert--Instruction_requise {
+  box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #F36B58;
+  background-color: #fff;
+}
+.fr-alert--Corrections_requises {
+  box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #F3A358;
+  background-color: #fff;
+}
+.fr-alert--A_signer {
+  box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #EECA4A;
+  background-color: #fff;
+}
+.fr-alert--Signee {
+  box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 2.5rem 0 0 0 #74CA66;
+  background-color: #fff;
+}
+
 
 /*
  * End display convention status
