--- a/templates/conventions/common/avenant_form_header.html
+++ b/templates/conventions/common/avenant_form_header.html
@@ -29,14 +29,50 @@
                 <hr>
                 {% if convention.is_avenant %}
                     <div class="fr-col-12 fr-mb-4w">
-                        <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
-                            <p class="fr-alert__title">
-                                votre avenant est
-                                <span class="fr-px-1w fr-h3">
-                                    {{convention.short_statut_for_template}}
-                                </span>
-                            </p>
-                            <p>Complétez ses informations, puis soumettez-le à votre service d’instruction</p>
+                        <div role="alert" class="fr-alert fr-alert--{{convention.statut_for_template.key_statut}} {% if convention|display_status_projet %}fr-icon-pencil-line{% elif convention|display_demande_correction %}fr-icon-eye-line{% elif convention|display_demande_instruction %}fr-icon-question-answer-line{% elif convention|display_redirect_sent %}fr-icon-draft-line{% elif convention|display_redirect_post_action %}fr-icon-success-line{% endif %}">
+                            {% if convention|display_status_projet %}
+                                <p class="fr-text--lg">
+                                    Votre avenant est
+                                    <span class="fr-alert__title">
+                                        en projet
+                                    </span>
+                                </p>
+                                <p>Complétez ses informations, puis soumettez-le à votre service d’instruction</p>
+                            {% elif convention|display_demande_correction %}
+                                <p class="fr-text--lg">
+                                    Votre avenant est
+                                    <span class="fr-alert__title">
+                                        en cours d'instruction
+                                    </span>
+                                </p>
+                                <p>Il sera prochainement validé ou votre instructeur vous demandera des corrections</p>
+                            {% elif convention|display_demande_instruction %}
+                                <p class="fr-text--lg">
+                                    Votre avenant est
+                                    <span class="fr-alert__title">
+                                        en attente de corrections
+                                    </span>
+                                </p>
+                                <p>Corrigez les demandes de votre instructeur puis soumettez-le à nouveau</p>
+                            {% elif convention|display_redirect_sent %}
+                                <p class="fr-text--lg">
+                                    Votre avenant est
+                                    <span class="fr-alert__title">
+                                        en attente d'une signature
+                                    </span>
+                                </p>
+                                {% if convention.administration.adresse and convention.administration.code_postal and convention.administration.ville %}
+                                    <p>Imprimez-le, signez-le et envoyez le à l’adresse suivante : {{ convention.administration.adresse }} - {{ convention.administration.code_postal }} {{ convention.administration.ville }}</p>
+                                {% endif %}
+                            {% elif convention|display_redirect_post_action %}
+                                <p class="fr-text--lg">
+                                    Votre avenant est
+                                    <span class="fr-alert__title">
+                                        finalisé !
+                                    </span>
+                                </p>
+                                <p>Vous devrez désormais créer un autre avenant si vous souhaitez mettre à jour une information</p>
+                            {% endif %}
                         </div>
                     </div>
 
